Bug 93838 - opengl glyph caching misplaces start center text
Summary: opengl glyph caching misplaces start center text
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: graphics stack (show other bugs)
Version:
(earliest affected)
5.1.0.0.alpha0+ Master
Hardware: Other All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:5.1.0 target:5.0.2
Keywords:
Depends on:
Blocks:
 
Reported: 2015-09-01 13:46 UTC by Miklos Vajna
Modified: 2016-10-25 19:24 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Bad output, with GL glyph caching. (125.15 KB, image/png)
2015-09-01 13:46 UTC, Miklos Vajna
Details
GL without glyph caching, good. (112.60 KB, image/png)
2015-09-01 13:47 UTC, Miklos Vajna
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Miklos Vajna 2015-09-01 13:46:54 UTC
Created attachment 118312 [details]
Bad output, with GL glyph caching.

If LO is started on Windows with:

SAL_FORCEGL=1 instdir/program/soffice.bin

Then text in the start center is misplaced a bit.
Comment 1 Miklos Vajna 2015-09-01 13:47:42 UTC
Created attachment 118313 [details]
GL without glyph caching, good.

How it should look like, as seen with SAL_DISABLE_GLYPH_CACHING=1 (workaround).
Comment 2 Commit Notification 2015-09-01 14:11:15 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=b1a918ae8aca9e9a1eaebecef3b82e011b10665f

tdf#93838 windows opengl: fix vertical text position in UniscribeLayout

It will be available in 5.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2015-09-01 15:21:55 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-5-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=7abc8172faa888ce8da22ddd0e4b33a60f23de75&h=libreoffice-5-0

tdf#93838 windows opengl: fix vertical text position in UniscribeLayout

It will be available in 5.0.2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.