tdf#93838 windows opengl: fix vertical text position in UniscribeLayout

For one, aPos.Y() is meant to be the baseline position of the text.
Based on the MSDN documentation and
<https://www-user.tu-chemnitz.de/~ygu/petzold/ch05c.htm>, that means if
we want to get top position, we have to only extract tmAscent and not
tmInternalLeading.

For another, ImplWinFontEntry::AddChunkOfGlyphs() adds a border of 2
pixels both horizontally and vertically, which means that then we need
to undo that when counting the vertical position, too.

Change-Id: I4ac8e881ea5910662674c2a1b53ece943487ccd9
(cherry picked from commit b1a918ae8aca9e9a1eaebecef3b82e011b10665f)
Reviewed-on: https://gerrit.libreoffice.org/18244
Reviewed-by: Jan Holesovsky <kendy@collabora.com>
Tested-by: Jan Holesovsky <kendy@collabora.com>